--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(134, 91, 12);
+  background-image: linear-gradient(18deg, red,rgba(255, 255, 0, 0.932))
 }
 
 table {
@@ -118,58 +118,64 @@ button {
   right: 29%;
 }
 
-.tab {
-  height: 50px;
-  position: sticky;
-  top: 0;
+.navbar {
   overflow: hidden;
-  background-color: rgb(36, 35, 35);
+  background-color: #333;
+  top: 0;
 }
 
-.tab button {
-  color: white;
-  background-color: inherit;
-  height: 50px;
-  width: 12.5%;
+.navbar a {
   float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
   border: none;
   outline: none;
-  padding: 5px 5px;
-  transition: 0.3s;
-  box-shadow: 0 0 0;
-}
-
-.tab button:hover {
-  background-color: rgb(0, 0, 0);
-}
-
-.tab button.active {
-  background-color: rgb(37, 200, 37);
-}
-
-.drop button:hover .sub {
-  float: left;
-  background-color: inherit;
   color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 }
 
-.sub {
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: rgb(223, 199, 199);
+}
+
+.dropdown-content {
   display: none;
+  position: absolute;
+  background-color: #353333;
+  min-width: 150px;
+  box-shadow: none;
+  z-index: 1;
 }
 
-.sub button {
+.dropdown-content a {
+  float: none;
   color: white;
-  background-color: inherit;
-  height: 50px;
-  width: 11.5%;
-  float: left;
-  border: none;
-  outline: none;
-  padding: 5px 5px;
-  transition: 0.3s;
-  box-shadow: 0 0 0;
-}
-.drop button:hover .sub {
-  background-color: rgb(0, 0, 0);
+  padding: 12px 16px;
+  text-decoration: none;
   display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: rgb(105, 105, 105);
+}
+
+.dropdown:hover .dropdown-content {
+  display: table;
 }
