--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,18 @@
 body {
-  background-image: linear-gradient(18deg, red,rgba(255, 255, 0, 0.932))
+  background-image: url(../img/bg.jpg);
+}
+
+h1,
+body h2,
+marquee {
+  color: white;
+}
+.type ul {
+  list-style-type: none;
+}
+
+.type ul li {
+  color: black;
 }
 
 table {
@@ -13,6 +26,11 @@ table th,
 table td {
   text-align: center;
   padding: 5px;
+}
+
+table td img {
+  width: 210px;
+  height: 220px;
 }
 
 table tr {
@@ -29,6 +47,10 @@ table th {
   width: 90%;
   background-color: rgb(250, 137, 9);
   box-shadow: 3px 3px 2px #aaaaaa;
+}
+
+.type {
+  color: white;
 }
 
 .grass {
