--- a/css/style-popup.css
+++ b/css/style-popup.css
@@ -1,19 +1,18 @@
 body {
   margin: 0;
   position: relative;
-  background-color: none;
 }
 
 .popup-cont {
   margin: 50px;
   padding: 20;
-  background-image: url(../img/bg.jpg);
+  background: url(../img/bg.jpg);
 }
 
 #pop-up {
   position: relative;
   top: -1000px;
-  animation: drop .5s ease forwards;
+  animation: drop 0.5s ease forwards;
 }
 
 @keyframes drop {
@@ -23,16 +22,27 @@ body {
     transform: translateY(1020px);
   }
   100% {
-    transform: translateY(980px); opacity: 1;
+    transform: translateY(980px);
+    opacity: 1;
   }
 }
 
-#Gen1,#Gen2,#Gen3,#Gen4,#Gen5,#Gen6,#Gen7{
-box-shadow: none;
-padding-left: 20px;
-padding-right: 20px;
-position: absolute;
-top: 3px;
-right: 75px;
+#Gen1,
+#Gen2,
+#Gen3,
+#Gen4,
+#Gen5,
+#Gen6,
+#Gen7 {
+  box-shadow: none;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: absolute;
+  top: 3px;
+  right: 75px;
 }
 
+.bg {
+  text-align: center;
+  background-color: none;
+}
