--- a/css/style_grid.css
+++ b/css/style_grid.css
@@ -40,6 +40,7 @@
   justify-self: center;
   padding: 10px;
   color: white;
+  font-size: 20px;
 }
 .box2 img{
   align-self: center;
@@ -76,4 +77,10 @@
 
 .home-container > div {
   border: 5px white;
+}
+
+@media only screen and(max-width:500px){
+  .box2{
+    font-size: 10px;
+  }
 }
