--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body {
-  background: url(../img/bg.jpg);
+  background-image: url(../img/bg.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 h1,
