--- a/css/style_grid.css
+++ b/css/style_grid.css
@@ -151,6 +151,7 @@
   transform: scale(1.2);
   box-shadow: 1px 1px 3px black;
   mix-blend-mode: color-burn;
+  z-index: -1;
 }
 
 .g2:hover p,
@@ -173,6 +174,7 @@
   top: 20;
   color: rgb(255, 255, 255);
   text-align: center;
+
 }
 .g5 p {
   top: 8;
